package org.dorkmaster.flow;

public interface Task {
    FlowContext execute(FlowContext context);
}
